# rpi-hex-control

./: .env  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: jekyll.yml
app/core/: config.py
app/services/hex_lights/: color.py  hex.py  state.py
docs/: .gitignore  Gemfile  _config.yml  getting-started.md  index.html
docs/_site/: about.html  getting-started.html  index.html
server/: Dockerfile  pyproject.toml
server/app/: main.py
server/app/api/models/: polyhex.py
server/app/api/routes/: api.py
server/app/core/: config.py  events.py  hex.py  logging.py  settings.py
server/app/services/hex_lights/: board.py  color.py  fake_board.py  hex.py  mode.py  state.py
server/dotenv/: test.env
