[tool.poetry]
name = "rpi-control"
version = "0.1.0"
description = ""
authors = ["Dave Kerr <dakerr@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.78"
uvicorn = "0.17.6"
loguru = "0.6"
adafruit-circuitpython-neopixel = "^6.3.10"
rpi-ws281x = "^5.0.0"
adafruit-blinka = "^8.25.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
